# python-facebook

./: .gitignore  LICENSE  README.md  pyproject.toml
facebook/: facebook.py  setup.py
facebook.egg-info/: PKG-INFO  SOURCES.txt
template_underscore/: __init__.py  example.env  setup.py  signatures.py  strapi.py
