[project]
name = "facebook"
version = "0.1.0"
description = "A Python librayr for Facebook"
authors = [
    { name = "Fabien Papleux", email = "fabien@papleux.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests"
]

[tool.setuptools]
packages = ["facebook"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"